# andino_rmf

./: .gitignore  CONTRIBUTING.md  CONTROLLER.md  Dockerfile  LICENCE  MANAGER.md  README.md
andino_fleet/: README.md  package.xml  setup.cfg  setup.py
andino_fleet/andino_fleet/: andino_controller_server.py  fleet_manager_server.py  goal.yaml
andino_fleet/config/: controller.yaml  spawn_robots.yaml
andino_fleet/launch/: andino_controller.launch.py  andino_fleet_manager.launch.py  andino_w_controller.launch.py  spawn_multiple_robot.launch.py
andino_fleet/test/: test_andino_controller.py
andino_fleet_adapter/: README.md  config.yaml  package.xml  setup.cfg  setup.py
andino_fleet_adapter/andino_fleet_adapter/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py
andino_fleet_adapter/launch/: andino_fleet_adapter.launch.py
andino_fleet_adapter/test/: test_robot_api.py
andino_fleet_msg/: CMakeLists.txt  package.xml
andino_fleet_msg/srv/: CancelGoal.srv
andino_rmf_maps/: CMakeLists.txt  README.md  package.xml
andino_rmf_sim/: CMakeLists.txt  README.md  package.xml
andino_rmf_sim/launch/: andino_office.launch.py  common.launch.py
controller_action_msg/: CMakeLists.txt  package.xml
controller_action_msg/action/: AndinoController.action
controller_action_msg/msg/: RobotPose.msg
docker/: README.md  build.sh  dockerfile  join.sh  requirements.txt  run.sh
fleet_msg/: CMakeLists.txt  package.xml
fleet_msg/srv/: CancelGoal.srv  QueryController.srv  RemoveAllGoals.srv  RequestRobotPosition.srv  RobotControl.srv  SendGoal.srv
rmf_maps/: CMakeLists.txt  README.md  package.xml
rmf_maps/maps/andino_office/: andino_office.building.yaml
rmf_sim/: CMakeLists.txt  README.md  package.xml
rmf_sim/launch/: andino_office.launch.py  andino_office.launch.xml  common.launch.py  common.launch.xml  simulation.launch.xml
rmf_sim/rviz_config/: office.rviz
