<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>andino_rmf_sim</name>
  <version>0.0.0</version>
  <description>A package to launch RMF simulation for Andino fleet</description>
  <maintainer email="eloy.briceno@ekumenlabs.com">Eloy Briceno</maintainer>
  <maintainer email="ptientho@stevens.edu">Peera Tienthong</maintainer>
  <license file="LICENSE">BSD Clause 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rmf_building_sim_gz_plugins</exec_depend>
  <exec_depend>rmf_fleet_adapter</exec_depend>
  <exec_depend>rmf_robot_sim_gz_plugins</exec_depend>
  <exec_depend>rmf_traffic_ros2</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>ignition-fortress</exec_depend>
  <exec_depend>ros_ign_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
